# Dinodial-ai

./: Readme.md
backend/: .env  .gitignore  Makefile  README.md  app.py  client_handler.py  config.py  csv_utils.py  dinodial_client.py  make-call-request.json  model_config.py  nodemon.json  phone_call_handler.py  phone_handler.py  pyproject.toml  requirement.txt  restaurant_agent.md  run-dev.sh  run.sh  scheduler.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: About.css  About.jsx  BookingModal.css  BookingModal.jsx  Contact.css  Contact.jsx  Hero.css  Hero.jsx  Menu.css  Menu.jsx
